Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-629

_debug_req() never prints out opcode/flags/status

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.2.0, Lustre 2.1.2
    • Lustre 2.1.0
    • None
    • 3
    • 16,359
    • 4872

      The 2.x _debug_req() function was changed in https://bugzilla.lustre.org/show_bug.cgi?id=16359 (commit 5467a860213d454759bdfad91503691d6692b317) to avoid problems with accessing unswabbed message buffers. Unfortunately, this broke the printing of many useful _debug_req() messages, because it didn't check whether swabbing was actually needed in the first place.

      Also, in ptlrpc_expire_one_request() some extra debugging information was added in commit 368689640e6a42a152eee73d354dd6f68836065b, but never removed, making this common message overly verbose.

            adilger Andreas Dilger
            adilger Andreas Dilger
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved: